fixed structured list to scroll on mobile screens (#81)

--- a/src/app/components/internal/MarkdownPage/markdown-page.scss
+++ b/src/app/components/internal/MarkdownPage/markdown-page.scss
@@ -223,6 +223,12 @@
     }
   }
 
+  main[data-page="add-ons-overview"] & {
+    @media all and (max-width: 600px) {
+      overflow: scroll;
+    }
+  }
+
   ul,
   ol {
     @include typescale('epsilon');
